--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/fortify": "^1.7",
         "laravel/framework": "^8.40",
         "laravel/tinker": "^2.5",
+        "league/flysystem-aws-s3-v3": "~1.0",
         "qirolab/laravel-themer": "^1.5"
     },
     "require-dev": {
