--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
         "vue-loader": "15.9.5",
         "vue-template-compiler": "^2.6.12",
         "vuetify": "^2.5.3"
+    },
+    "dependencies": {
+        "vue-router": "^3.5.1"
     }
 }
